# GaoGaoWorkSpace

./: .env.example  .gitignore  Demand.md  README.md  WorkspaceApp.jsx  go.mod  index.html  package-lock.json  package.json  tailwind.config.js  update.json  vite.config.js
cmd/gaogao/: main.go
docs/: sample-structure.md
e2e-tests/: settings-desktop.e2e.mjs
internal/app/: export.go  import.go  scan.go  types.go
scripts/: build-local-setup.js  release.js
scripts/lib/: tauriSigningEnv.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/src/: app_state.rs  lib.rs
src-tauri/src/commands/: dashboard.rs  debug.rs  journal.rs  mod.rs  notes.rs  settings.rs  workspace.rs
src-tauri/src/storage/: db.rs  migrations.rs  mod.rs  models.rs
src/app/: constants.js  mockData.js  settings.js  version.js
src/components/: SettingsView.jsx
src/components/common/: ActivityIcon.jsx  FilterInput.jsx  MultiSelectFilter.jsx  TabButton.jsx  ToastProvider.jsx
src/components/dashboard/: DashboardView.jsx
src/components/journal/: JournalWorkspaceView.jsx
src/components/notes/: MindMapNode.jsx  NotesWorkspaceView.jsx
src/components/workspace/: DirectoryEngineView.jsx  VirtualTreeNode.jsx  VirtualWorkspaceView.jsx
src/lib/: dashboard.js  journal.js  notes.js  settings.js  tauri.js  toast.js  updater.js  workspace.js
src/styles/: index.css
src/test/: App.test.jsx  JournalWorkspaceView.test.jsx  SettingsView.test.jsx  renderWithToast.jsx  setup.js  updater.test.js
