[package]
name = "personal_os"
version = "1.0.322"
description = "Personal OS desktop workspace built with Tauri v2"
authors = ["Juan Hu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "personal_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
calamine = "0.26.1"
csv = "1.3.1"
notify = "6.1.1"
rust_xlsxwriter = "0.79.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
zip = "0.6.6"
